--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Etudiants: Alexandre Julien 1012389 & Sam Chandavong 1004915-->
+<!-- Etudiants: Alexandre Julien 1012389 & Sam Chandavong 1004915 allo-->
 <html lang="fr">
 
 <head>
