--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<!-- Etudiants: Alexandre Julien 1012389 & Sam Chandavong 1004915 allo-->
+<!-- Etudiants: Alexandre Julien 1012389 & Sam Chandavong 1004915 -->
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
     <title>Accueil</title>
 </head>
-
 <body>
-    <div class="container"></div>
-        <img src="./images/seim_banner.jpg" alt="Image not supported by your browser">
-        <nav>
-            <b>
-                <a href="index.html">Accueil</a> &nbsp;
-                <a href="diner.html">Diner</a> &nbsp;
-                <a href="souper.html">Souper</a> &nbsp;
-                <a href="breuvages.html">Breuvages</a>
-                <a href="a_propos.html">À propos</a>
-            </b>
-        </nav>
-        <header>
-            <h1>Restaurant Miyamoto</h1>
-            <h3>Toujours japonais</h3>
+    <div class="container">
+        <header id="banner">
+            <div id="bannerName">
+                <h1>Restaurant Miyamoto</h1>
+                <h3>Toujours japonais</h3>
+            </div>
         </header>
+        <nav id="navBar">
+            <a href="index.html">ACCUEIL</a> &nbsp;
+            <a href="diner.html">DINER</a> &nbsp;
+            <a href="souper.html">SOUPER</a> &nbsp;
+            <a href="breuvages.html">BREUVAGES</a> &nbsp;
+            <a href="a_propos.html">À PROPOS</a>
+        </nav>
         <main>
+            <div id="mainText">
+                <p>Chez Miyamoto, nous sommes fier de pouvoir partager avec vous la fine cuisine du Japon. Découvrez notre menu à travers notre site web et venez nous voir en personne.</p>
+            </div>
         </main>
     </div>
     <footer>
-        <div>
+        <div id="footerText">
             <small>
                 RESTAURANT MIYAMOTO, 555 rue Sainte-Julie, Montreal, Canada<br>
                 Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés
@@ -36,5 +36,4 @@
         </div>
     </footer>
 </body>
-
 </html>
