Banner img changed and banner done, index.html done, contact done, diner/souper merged into menu

--- a/a_propos.html
+++ b/a_propos.html
@@ -8,38 +8,30 @@
 </head>
 <body>
     <header id="banner">
-        <div id="bannerName">
-            <h1>Restaurant Miyamoto</h1>
-            <h3>Toujours japonais</h3>
+        <div id="bannerTitleWrapper">
+            <div id="titleHighlighter">
+                <h1>Restaurant Miyamoto</h1>
+                <h3>Toujours japonais</h3>
+            </div>
         </div>
     </header>
     <nav id="navBar">
         <a href="index.html">ACCUEIL</a> &nbsp;
-        <a href="diner.html">DINER</a> &nbsp;
-        <a href="souper.html">SOUPER</a> &nbsp;
+        <a href="menu.html">MENU</a> &nbsp;
         <a href="breuvages.html">BREUVAGES</a> &nbsp;
+        <a href="contact.html">CONTACT</a> &nbsp;
         <a href="a_propos.html">À PROPOS</a>
     </nav>
-    <main>
-        <header>
-            <h2>À propos</h2>
-        </header>
-        <section>
-            <p>
-                Merci d'avoir visité notre site web. Nous somme fier d'offrir une fine cuisine authentiquement japonaise de Montréal. Prenez une réservation maintenant et venez découvrir les meileures saveurs d'Asie.
-            </p>
-        </section>
-        <section>
-            <h3>Réservations</h3>
-            <p>Tél: 555-555-1234</p>
-            <h3>Heures d'ouverture</h3>
-            <ul>
-                <li>Lundi au Mecredi: 12:00-21:00</li>
-                <li>Jeudi & Vendredi: 12:00-23:00</li>
-                <li>Samedi & Dimanche: 11:00-00:00</li>
-            </ul>
-        </section>
-    </main>
+        <main>
+            <div id="mainText">
+                <header>
+                    <h2>À propos</h2>
+                </header>
+                <p>
+                    Nous somme fier d'offrir une fine cuisine authentiquement japonaise de Montréal.
+                </p>
+            </div>
+        </main>
     </div>
     <footer>
         <div id="footerText">
