--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
-    <title>Accueil</title>
+    <title>À Propos</title>
 </head>
 <body>
     <header id="banner">
@@ -24,9 +24,22 @@
     </nav>
     <main>
         <div id="mainText">
+            <header>
+                <h2>Contact</h2>
+            </header>
             <p>
-                Chez Miyamoto, nous sommes fier de pouvoir partager avec vous la fine cuisine du Japon. Découvrez notre menu à travers notre site web et venez nous voir en personne.
+                Prenez une réservation maintenant et venez découvrir les meileures saveurs d'Asie.
             </p>
+            <h3>Réservations</h3>
+            <p>Tél: 555-555-1234</p>
+            <div id="heuresDiv">
+                <h3>Heures d'ouverture</h3>
+                <ul>
+                    <li>Lundi au Mecredi: 12:00-21:00</li>
+                    <li>Jeudi & Vendredi: 12:00-23:00</li>
+                    <li>Samedi & Dimanche: 11:00-00:00</li>
+                </ul>
+            </div>
         </div>
     </main>
     <footer>
