mise a jour : menu, gallerie

--- a/a_propos.html
+++ b/a_propos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>À Propos</title>
 </head>
 <body>
@@ -17,10 +18,10 @@
     </header>
     <nav id="navBar">
         <a href="index.html">ACCUEIL</a> &nbsp;
+        <a href="a_propos.html">À PROPOS</a> &nbsp;
         <a href="menu.html">MENU</a> &nbsp;
-        <a href="breuvages.html">BREUVAGES</a> &nbsp;
-        <a href="contact.html">CONTACT</a> &nbsp;
-        <a href="a_propos.html">À PROPOS</a>
+        <a href="gallerie.html">GALLERIE</a> &nbsp;
+        <a href="contact.html">CONTACT</a>
     </nav>
         <main>
             <div id="mainText">
