--- a/a_propos.html
+++ b/a_propos.html
@@ -20,28 +20,33 @@
         <a href="index.html">ACCUEIL</a> &nbsp;
         <a href="a_propos.html">À PROPOS</a> &nbsp;
         <a href="menu.html">MENU</a> &nbsp;
-        <a href="gallerie.html">GALLERIE</a> &nbsp;
+        <a href="galerie.html">GALERIE</a> &nbsp;
         <a href="contact.html">CONTACT</a>
     </nav>
-        <main>
-            <div id="mainText">
-                <header>
-                    <h2>À propos</h2>
-                </header>
-                <p>
-                    Nous somme fier d'offrir une fine cuisine authentiquement japonaise de Montréal.
-                </p>
-            </div>
-        </main>
-    </div>
+    <main>
+        <div class="mainText" id="mainTextPropos">
+            <header>
+                <h2>À propos</h2>
+            </header>
+            <p>
+                Créé par le légendaire samurai Miyamoto Musashi, après que ce dernier fit un bond de 500 ans jusqu'à notre ère. Les
+                duels de katana étant interdits aujourd'hui, Miyamoto se résigna a seulement trancher des sushis et fonda donc
+                notre restaurant en 2018.
+            </p>
+            <p>
+                Notre ambiance authentique offre une expérience à couper le souffle pour nos visiteurs. Prenez toutefois soin de ne
+                pas regarder le cuisinier directement dans les yeux.
+            </p>
+        </div>
+    </main>
     <footer>
         <div id="footerText">
             <small>
                 RESTAURANT MIYAMOTO, 555 rue Sainte-Julie, Montreal, Canada<br>
-                Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés
+                Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés<br>
+                Tél: 514-555-1234<br>
             </small>
         </div>
     </footer>
 </body>
-
 </html>
