--- a/contact.html
+++ b/contact.html
@@ -20,34 +20,33 @@
         <a href="index.html">ACCUEIL</a> &nbsp;
         <a href="a_propos.html">À PROPOS</a> &nbsp;
         <a href="menu.html">MENU</a> &nbsp;
-        <a href="gallerie.html">GALLERIE</a> &nbsp;
+        <a href="galerie.html">GALERIE</a> &nbsp;
         <a href="contact.html">CONTACT</a>
     </nav>
     <main>
-        <div id="mainText">
+        <div class="mainText" id="mainTextContact">
             <header>
                 <h2>Contact</h2>
             </header>
             <p>
-                Prenez une réservation maintenant et venez découvrir les meileures saveurs d'Asie.
+                Prenez une réservation maintenant et venez découvrir les meilleures saveurs d'Asie.
             </p>
             <h3>Réservations</h3>
             <p>Tél: 555-555-1234</p>
-            <div id="heuresDiv">
-                <h3>Heures d'ouverture</h3>
-                <ul>
-                    <li>Lundi au Mecredi: 12:00-21:00</li>
-                    <li>Jeudi & Vendredi: 12:00-23:00</li>
-                    <li>Samedi & Dimanche: 11:00-00:00</li>
-                </ul>
-            </div>
+            <h3>Heures d'ouverture</h3>
+            <ul>
+                <li>Lundi au Mecredi: 12:00-21:00</li>
+                <li>Jeudi & Vendredi: 12:00-23:00</li>
+                <li>Samedi & Dimanche: 11:00-00:00</li>
+            </ul>
         </div>
     </main>
     <footer>
         <div id="footerText">
             <small>
                 RESTAURANT MIYAMOTO, 555 rue Sainte-Julie, Montreal, Canada<br>
-                Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés
+                Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés<br>
+                Tél: 514-555-1234<br>
             </small>
         </div>
     </footer>
