--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
         <a href="index.html">ACCUEIL</a> &nbsp;
         <a href="a_propos.html">À PROPOS</a> &nbsp;
         <a href="menu.html">MENU</a> &nbsp;
-        <a href="gallerie.html">GALLERIE</a> &nbsp;
+        <a href="galerie.html">GALERIE</a> &nbsp;
         <a href="contact.html">CONTACT</a>
     </nav>
     <main>
-        <div id="mainText">
+        <div class="mainText">
+            <header>
+                <h2>Accueil</h2>
+            </header>
             <p>
-                Chez Miyamoto, nous sommes fier de pouvoir partager avec vous la fine cuisine du Japon. Découvrez notre menu à travers notre site web et venez nous voir en personne.
+                Chez Miyamoto, nous sommes fiers de pouvoir partager avec vous la fine cuisine du Japon. Découvrez notre menu à travers notre site web et venez nous voir en personne.
             </p>
         </div>
     </main>
@@ -34,7 +37,8 @@
         <div id="footerText">
             <small>
                 RESTAURANT MIYAMOTO, 555 rue Sainte-Julie, Montreal, Canada<br>
-                Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés
+                Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés<br>
+                Tél: 514-555-1234<br>
             </small>
         </div>
     </footer>
