--- a/menu.html
+++ b/menu.html
@@ -20,72 +20,51 @@
         <a href="index.html">ACCUEIL</a> &nbsp;
         <a href="a_propos.html">À PROPOS</a> &nbsp;
         <a href="menu.html">MENU</a> &nbsp;
-        <a href="gallerie.html">GALLERIE</a> &nbsp;
+        <a href="galerie.html">GALERIE</a> &nbsp;
         <a href="contact.html">CONTACT</a>
     </nav>
     <main>
-        <div id="mainText">
-            <div id="entries">
+        <div class="mainText">
+            <div class="columnLeft">
                 <h4>Entrée</h4>
-                <dl>
-                    <dt>Soupe Miso (4$)</dt>
-                    <dt>Takoyaki (5$)</dt>
-                    <dt>Tempura (5$)</dt>
-                    <dt>Edamame (4$)</dt>
-                    <dt>Gyoza (6$)</dt>
-                    <dt>Takoyaki (5$)</dt>
-                    <dt>Edamame (4$)</dt>
-                    <dt>Karaage original (6$)</dt>
-                    <dt>Karaage épicé (7$)</dt>
-                    <dt>Takowasabi (6$)</dt>
-                    <dt>Calamar grillé (9$)</dt>
-                </dl>
+                <ul>
+                    <li>Soupe Miso (4$)</li>
+                    <li>Takoyaki (5$)</li>
+                    <li>Tempura (5$)</li>
+                    <li>Edamame (4$)</li>
+                    <li>Gyoza (6$)</li>
+                    <li>Karaage original (6$)</li>
+                    <li>Karaage épicé (7$)</li>
+                    <li>Takowasabi (6$)</li>
+                    <li>Calamar grillé (9$)</li>
+                </ul>
             </div>
-            <div id="mainDishes">
+            <div class="columnCenter">
                 <h4>Plat principal</h4>
-                <dl>
-                    <dt>Tonkatsu (12$)</dt>
-                    <dt>Gyu Ramen (15$)</dt>
-                    <dt>Ramen au porc (15$)</dt>
-                    <dt>Plateau de sushi(15$)</dt>
-                    <dt>Yakisoba (10$)</dt>
-                    <dt>Udon (10$)</dt>
-                    <dt>Yaki Udon (15$)</dt>
-                    <dt>Omelette (10$)</dt>
-                    <dt>Okonomiyaki (10$)</dt>
-                    <dt>Riz à la vapeur (5$)</dt>
-                </dl>
+                <ul>
+                    <li>Tonkatsu (12$)</li>
+                    <li>Gyu Ramen (15$)</li>
+                    <li>Ramen au porc (15$)</li>
+                    <li>Plateau de sushi (15$)</li>
+                    <li>Yakisoba (10$)</li>
+                    <li>Udon (10$)</li>
+                    <li>Yaki Udon (15$)</li>
+                    <li>Omelette (10$)</li>
+                    <li>Okonomiyaki (10$)</li>
+                </ul>
             </div>
-            <div id="desserts">
+            <div class="columnRight">
                 <h4>Desserts</h4>
-                <dl>
-                    <dt>Mochi (5$)</dt>
-                    <dt>Crème glacée : matcha, fleur de cerisier (5$)</li>
-                </dl>
-            </div>
-            <div id="sake">
+                <ul>
+                    <li>Mochi (5$)</li>
+                    <li>Crème glacée matcha (5$)</li>
+                </ul>
                 <h4>Saké</h4>
-                <dl>
-                    <dt>Sake (10$)</dt>   
-                    <dt>Sake bomb (12$)</dt>
-                    <dt>Sake froid (15$)</dt>
-                </dl>
-            </div>
-            <div id="beer">
-                <h4>Bière</h4>
-                <dl>
-                    <dt>Sapporo (7$)</dt>
-                    <dt>Kirin (9$)</dt>
-                </dl>
-            </div>
-            <div id="drink">
-                <h4>Boisson</h4>
-                <dl>
-                    <dt>Ramune (4$)</dt>
-                    <dt>Thé vert (3$)</dt>
-                    <dt>Boisson gazeuse (3$)</dt>
-                    <dt>Eau de source (3$)</dt>
-                </dl>
+                <ul>
+                    <li>Sake (10$)</li>
+                    <li>Sake bomb (12$)</li>
+                    <li>Sake froid (15$)</li>
+                </ul>
             </div>
         </div>
     </main>
@@ -93,7 +72,8 @@
         <div id="footerText">
             <small>
                 RESTAURANT MIYAMOTO, 555 rue Sainte-Julie, Montreal, Canada<br>
-                Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés
+                Copyright &copy; Restaurant Miyamoto 2018. Tout droits réservés<br>
+                Tél: 514-555-1234<br>
             </small>
         </div>
     </footer>
